...
      "Toggle Inspector"
    case .newRecord:
      "New Record"
    case .selectNotes:
      "Show Notes"
    case .selectJournal:
      "Show Journal"
    }
  }

  var systemImage: String {
    switch self {
    case .toggleSidebar:
...
